--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -6,13 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Registro de Despesas</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
+  
   <div class="container">
-    <h1>Despesas Pessoais</h1>
+    <h1><i class="fas fa-wallet"></i> Despesas Pessoais</h1>
 
     <form id="expense-form">
-      <input type="number" id="valor" placeholder="Valor" required />
+      <input type="number" id="valor" placeholder="Valor (R$)" required />
       <input type="text" id="descricao" placeholder="Descrição" required />
       <select id="categoria" required>
         <option value="">Categoria</option>
@@ -21,8 +22,10 @@
         <option value="Lazer">Lazer</option>
         <option value="Contas">Contas</option>
       </select>
-      <button type="submit">Adicionar</button>
+      <button type="submit"><i class="fas fa-plus"></i> Adicionar Despesa</button>
     </form>
+
+    <h2><i class="fas fa-list"></i> Listagem de Despesas</h2>
 
     <select id="filtro-categoria">
       <option value="">Todas as Categorias</option>
